--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".MainActivity2"
+            android:theme="@style/NoActionBarTheme" />
+        <activity
             android:name=".AboutUs"
             android:theme="@style/NoActionBarTheme" />
         <activity
