Page Setting Completed
Now we can set any quality page with margin and it would get updated in the shared preferences also.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".PageSetting"
+            android:theme="@style/NoActionBarTheme" />
+        <activity
             android:name=".MainActivity2"
             android:theme="@style/NoActionBarTheme" />
         <activity
